# AI_Experiments

./: .gitignore  10_text_summarization.py  34_Uebersetzung.ipynb  pyproject.toml
10_Voruebungen/: 30_text_to_image.py
DeepLearning/1DCNN/: 1DCNN.py
DeepLearning/EigenerVersuch/: neuron.py
DeepLearning/Udemy/EigenerVersuch/: network.py
DeepLearning/keras_example/: example.py
DeepLearning/nn_ct/: neuralnetwork.py
Rheinwerk_GenerativeKI/: 3_12_Kundenfeedback.py  3_4__text_summarization.py  3_4_text_summarization.ipynb  4_2_1_OpenAi.py  4_2_2_groq.py  4_2_4_multimodal.py  4_7_3_OpenAI_RouterChain.py  4_8_2_llmschutz.py  5_5_Self-Consistency_Chain-of-Thought.py  pyproject.toml
Rheinwerk_GenerativeKI/3_12_Kundenfeedback/: .gitignore  90_capstone_start.py  91_capstone_end.py  main.py
