[project]
name = "GenerativeKI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "arxiv>=2.2.0",
    "diffusers>=0.35.1",
    "hf-xet>=1.1.9",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.8",
    "pandas>=2.3.2",
    "pymupdf>=1.26.4",
    "torch>=2.8.0",
    "transformers>=4.55.4",
]
